--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
           name: run tests
           environment:
             REDIS_URL:
+            MAILGUN_API_KEY: 5b0fc1f0-4edb-4363-ab05-cb85e2f85781
           command: |
             pipenv run py.test test.py -v --junitxml=test-reports/junit/junit.xml
 
