Mock url in test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
             REDIS_URL:
             MAILGUN_API_KEY: 5b0fc1f0-4edb-4363-ab05-cb85e2f85781
             MAILGUN_DOMAIN: whatever.com
+            XMATTERS_WEBHOOK: https://fake/callback
           command: |
             pipenv run py.test test.py -v --junitxml=test-reports/junit/junit.xml
 
