--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = arrow,attr,cssselect,flask,lxml,redis,requests,responses,robobrowser,schedule,sentry_sdk,tqdm
+known_third_party = arrow,attr,cssselect,flask,lxml,redis,requests,robobrowser,schedule,sentry_sdk,tqdm
