Disable gzip/deflate in tests

--- a/tests/fixtures/cassettes/test_sources[armadale].yml
+++ b/tests/fixtures/cassettes/test_sources[armadale].yml
@@ -1,5 +1,5 @@
 http_interactions:
-- recorded_at: '2020-05-31T04:41:08'
+- recorded_at: '2020-05-31T04:44:18'
   request:
     body:
       encoding: utf-8
@@ -8,7 +8,7 @@ http_interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - none
       Connection:
       - keep-alive
       User-Agent:
@@ -91,7 +91,7 @@ http_interactions:
         ></script>\n<script src=\"https://www.armadale.wa.gov.au/sites/all/themes/armadale/js/script.js?qb5ye1\"\
         ></script>\n<script>jQuery.extend(Drupal.settings, {\"basePath\":\"\\/\",\"\
         pathPrefix\":\"\",\"ajaxPageState\":{\"theme\":\"armadale\",\"theme_token\"\
-        :\"GzbK8FO7stjk_tKU1mHLkBvy_TjwvQbLBgUpt3GdBaY\",\"js\":{\"sites\\/all\\/themes\\\
+        :\"cS8CVAVeuwjZq8VIMdkkdrTGvnV9DvkKxpE3UylX7MA\",\"js\":{\"sites\\/all\\/themes\\\
         /armadale\\/js\\/jquery-3.4.0.js\":1,\"misc\\/jquery-extend-3.4.0.js\":1,\"\
         misc\\/jquery.once.js\":1,\"misc\\/drupal.js\":1,\"sites\\/all\\/modules\\\
         /google_analytics\\/googleanalytics.js\":1,\"0\":1,\"sites\\/all\\/themes\\\
@@ -146,7 +146,7 @@ http_interactions:
         >  \r\n\t  <div class=\"region region-alert-accessibility\">\n    <div id=\"\
         block-views-out-for-comments-block-2\" class=\"block block-views first last\
         \ odd\">\n\n      \n  <div class=\"view view-out-for-comments view-id-out_for_comments\
-        \ view-display-id-block_2 view-dom-id-d85ee7c5ef07563fbc8651e63040d01a\">\r\
+        \ view-display-id-block_2 view-dom-id-585c13f82b75137d63ca9dd7b2534cb4\">\r\
         \n        \r\n  \t\r\n\t\r\n  \r\n\t\r\n  \t\t\r\n\t    <div class=\"view-content\"\
         >\r\n\t\t\t\t\t\t\r\n        <div class=\"views-row views-row-1 views-row-odd\
         \ views-row-first\">\r\n      \r\n  <div class=\"views-field views-field-nid\"\
@@ -513,7 +513,7 @@ http_interactions:
         \r\n\t\t\r\n\t\t\t\t\r\n\t<h3 class=\"hidden\">Lost cats and dogs (Animal\
         \ Management Facility)</h3>\r\n</article>\r\n\n<div id=\"block-views-impounded-animals-block-1\"\
         \ class=\"block block-views even\">\n\n      \n  <div class=\"view view-impounded-animals\
-        \ view-id-impounded_animals view-display-id-block_1 centerDiv view-dom-id-03e3e905715f277cb3a65bf873628323\"\
+        \ view-id-impounded_animals view-display-id-block_1 centerDiv view-dom-id-27e8a7052b2459cbf7900ec5245759d6\"\
         >\r\n        \r\n  \t\r\n\t\r\n  \r\n\t\r\n  \t\t\r\n\t    <div class=\"view-content\"\
         >\r\n\t\t\t\t\t\t\r\n        <div class=\"views-row views-row-1 views-row-odd\
         \ views-row-first views-row-last\">\r\n      \r\n  <div class=\"views-field\
@@ -533,7 +533,7 @@ http_interactions:
         \ class=\"clear\"></div></div>  </div>  </div>\r\n    </div>\r\n\t\t\t\r\n\
         \  \r\n  \r\n  \r\n  \r\n  \r\n  \r\n</div>\n</div>\n<div id=\"block-views-last-modified-block\"\
         \ class=\"block block-views last odd\">\n\n      \n  <div class=\"view view-last-modified\
-        \ view-id-last_modified view-display-id-block view-dom-id-f76af2e10b840fc72442d690ba910909\"\
+        \ view-id-last_modified view-display-id-block view-dom-id-e3143cb6a8400f173bf3af6fdd7ab9f8\"\
         >\r\n        \r\n  \t\r\n\t\r\n  \r\n\t\r\n  \t\t\r\n\t    <div class=\"view-content\"\
         >\r\n\t\t\t\t\t\t\r\n        <div class=\"views-row views-row-1 views-row-odd\
         \ views-row-first views-row-last\">\r\n      \r\n  <div class=\"views-field\
@@ -594,7 +594,7 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Date:
-      - Sun, 31 May 2020 04:41:08 GMT
+      - Sun, 31 May 2020 04:44:19 GMT
       Expires:
       - Sun, 19 Nov 1978 05:00:00 GMT
       Link:
