--- a/tests/fixtures/cassettes/test_sources[gosnells].yml
+++ b/tests/fixtures/cassettes/test_sources[gosnells].yml
@@ -1,5 +1,5 @@
 http_interactions:
-- recorded_at: '2020-05-31T04:41:11'
+- recorded_at: '2020-05-31T04:44:25'
   request:
     body:
       encoding: utf-8
@@ -8,7 +8,7 @@ http_interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - none
       Connection:
       - keep-alive
       User-Agent:
@@ -126,7 +126,7 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Date:
-      - Sun, 31 May 2020 04:41:11 GMT
+      - Sun, 31 May 2020 04:44:24 GMT
       Server:
       - Microsoft-IIS/8.5
       X-AspNet-Version:
