--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,7 @@
 [settings]
 known_third_party = arrow,attr,betamax,betamax_serializers,cssselect,flask,lxml,pytest,redis,requests,robobrowser,schedule,sentry_sdk,snapshottest,tqdm
+multi_line_output=3
+use_parentheses=True
+include_trailing_comma=True
+force_grid_wrap=0
+line_length=88
